--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -5,14 +5,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
+  <meta name="robots" content="noindex, nofollow" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <link rel="stylesheet" href="%PUBLIC_URL%/site_setting/theme.css"/>
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
+  <link rel="stylesheet" href="%PUBLIC_URL%/site_setting/theme.css" />
   <script src="%PUBLIC_URL%/site_setting/config.js"></script>
-  <!--<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">-->
 
   <title>Nodeeweb - admin panel</title>
 
+  <meta name="app_version" content="%REACT_APP_VERSION%" />
 </head>
 
 <body>
