--- a/front/public/index.html
+++ b/front/public/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no,maximum-scale=1">
   <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-  <link rel="icon" type="image/png" href="/site_setting/logo.png" />
-  <link rel="stylesheet" href="/site_setting/theme.css" />
-  <script src="/site_setting/config.js"></script>
+  <link rel="icon" type="image/png" href="%PUBLIC_URL%/site_setting/logo.png" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/site_setting/theme.css" />
+  <script src="%PUBLIC_URL%/site_setting/config.js"></script>
 </head>
 
 <body>
