--- a/front/public/index.html
+++ b/front/public/index.html
@@ -5,9 +5,16 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no,maximum-scale=1">
   <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-  <link rel="icon" type="image/png" href="/site_setting/logo.png" />
-  <link rel="stylesheet" href="/site_setting/theme.css" />
-  <script src="/site_setting/config.js"></script>
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/assets/icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/assets/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/assets/icons/favicon-16x16.png">
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <link rel="icon" type="image/png" href="%PUBLIC_URL%/site_setting/logo.png" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/site_setting/theme.css" />
+  <script src="%PUBLIC_URL%/site_setting/config.js"></script>
+  <meta name="app_version" content="%REACT_APP_VERSION%" />
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -15,7 +22,17 @@
     You need to enable JavaScript to run this app.
   </noscript>
   <div id="root"></div>
-
+  <% if (process.env.NODE_ENV==="production" ) { %>
+    <% if (process.env.REACT_APP_CLARITY_ID) { %>
+      <script id="ms-clarity" type="text/javascript">
+        (function (c, l, a, r, i, t, y) {
+          c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
+          t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
+          y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
+        })(window, document, "clarity", "script", "%REACT_APP_CLARITY_ID%");
+      </script>
+      <% } %>
+        <% } %>
 </body>
 
 </html>
