--- a/front/public/index.html
+++ b/front/public/index.html
@@ -28,7 +28,7 @@
         (function (c, l, a, r, i, t, y) {
           c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
           t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
-          y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
+          y = l.getElementsByTagName(r)[0]; y.parentNode.insertFirst(t, y);
         })(window, document, "clarity", "script", "%REACT_APP_CLARITY_ID%");
       </script>
       <% } %>
